[gd_scene load_steps=7 format=3 uid="uid://dr1kjhi1kud2t"]

[ext_resource type="Script" uid="uid://cigh8xtasvagr" path="res://src/UI/elements/controls/controls_container.gd" id="1_4urab"]
[ext_resource type="PackedScene" uid="uid://bnquvjas415r5" path="res://src/UI/elements/controls/input_prompt.tscn" id="1_8fv5s"]
[ext_resource type="Texture2D" uid="uid://coy4vq3gvvrq0" path="res://assets/input_prompts/keyboard_w.png" id="2_6bih4"]
[ext_resource type="Texture2D" uid="uid://bmdsb82kt0fc7" path="res://assets/input_prompts/keyboard_a.png" id="3_isl26"]
[ext_resource type="Texture2D" uid="uid://ni5db7lam6l3" path="res://assets/input_prompts/keyboard_s.png" id="4_r86n3"]
[ext_resource type="Texture2D" uid="uid://cfsv7snbqj6lc" path="res://assets/input_prompts/keyboard_d.png" id="5_uwqg7"]

[node name="ControlsContainer" type="VBoxContainer"]
offset_right = 104.0
offset_bottom = 95.0
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_4urab")

[node name="TopRow" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="Left" parent="TopRow" instance=ExtResource("1_8fv5s")]
layout_mode = 2

[node name="Center" parent="TopRow" instance=ExtResource("1_8fv5s")]
layout_mode = 2
texture = ExtResource("2_6bih4")

[node name="Right" parent="TopRow" instance=ExtResource("1_8fv5s")]
layout_mode = 2

[node name="CenterRow" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="Left" parent="CenterRow" instance=ExtResource("1_8fv5s")]
layout_mode = 2
texture = ExtResource("3_isl26")

[node name="Center" parent="CenterRow" instance=ExtResource("1_8fv5s")]
layout_mode = 2
texture = ExtResource("4_r86n3")

[node name="Right" parent="CenterRow" instance=ExtResource("1_8fv5s")]
layout_mode = 2
texture = ExtResource("5_uwqg7")

[node name="BottomRow" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Left" parent="BottomRow" instance=ExtResource("1_8fv5s")]
layout_mode = 2

[node name="Center" parent="BottomRow" instance=ExtResource("1_8fv5s")]
layout_mode = 2

[node name="Right" parent="BottomRow" instance=ExtResource("1_8fv5s")]
layout_mode = 2

[node name="Label" type="Label" parent="."]
layout_mode = 2
size_flags_vertical = 6
size_flags_stretch_ratio = 0.5
text = "To Move"
horizontal_alignment = 1
